spacing issues

--- a/style.css
+++ b/style.css
@@ -512,7 +512,7 @@ nav ul li a {
 	padding: 3vw 0 5vw 0;
 }
 .project-section * {
-	width: calc( .85 * var(--responsive--aligndefault-width));
+	width: calc( .75 * var(--responsive--aligndefault-width));
 	margin: auto;
 }
 .gallery img, .proj img {
@@ -793,7 +793,7 @@ footer {
 	background-color: var(--global--color-grey);
 }
 .ftr {
-	width: calc(.969 * var(--responsive--aligndefault-width));
+	width: calc(.9 * var(--responsive--aligndefault-width));
 	margin: auto;
 	display: flex;
 	justify-content: space-between;
@@ -826,7 +826,7 @@ footer {
 *	==============================================
 */
 .personal-area {
-	width: calc( .95 * var(--responsive--aligndefault-width));
+	width: calc( .85 * var(--responsive--aligndefault-width));
 	margin: auto;
 
 	padding: 7vw 0;
@@ -855,21 +855,21 @@ footer {
 	padding: 0 .75vw
 }
 .personal-area img {
-	width: 15vw;
-	height: 10vw;
+	width: 17vw;
+	height: 12vw;
 	object-fit: cover;
 }
 .block-height {
-	height: 10vw;
+	height: 12vw;
 }
 .column-4 .block-height {
 	padding-top: 1.5vw;
 }
 .height {
-	height: 11.5vw !important;
+	height: 13.5vw !important;
 }
 .more-h {
-	height: 11.5vw;
+	height: 13.5vw;
 	position: relative;
 }
 .more-h img {
@@ -878,8 +878,8 @@ footer {
 	left:0;
 }
 .block {
-	height: 10vw;
-	width: 10vw;
+	height: 12vw;
+	width: 12vw;
 }
 .grn {
 	background-color: var(--global--color-green);
@@ -1196,7 +1196,7 @@ footer {
 	background-color: var(--global--color-yellow);
 }
 .courses {
-	width: calc( .9 * var(--responsive--aligndefault-width));
+	width: calc( .85 * var(--responsive--aligndefault-width));
 	margin: auto;
 	padding: 4vw 0;
 }
